kubernetes/apps/ai/dify/app/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.29.0-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dify
  namespace: ai
  annotations:
    tailscale.com/tags: "tag:k8s"
spec:
  ingressClassName: tailscale
  rules:
    - host: dify.${SECRET_TAILNET}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dify
                port:
                  number: 80
  tls:
    - hosts:
        - dify.${SECRET_TAILNET}
